# crewai_multi_agent_debate

./: README.md  decide.md  oppose.md  propose.md  pyproject.toml
src/crewai_multi_agent_debate/: crew.py  main.py
src/crewai_multi_agent_debate/config/: agents.yaml  tasks.yaml
